some more corrections. Now the note looks small on an iphone but still readable. Should probably start large and have a shrinking effect or somethings...

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,6 +67,7 @@ input#party {
 	padding-left: 0;
 	padding-right: 0;
 	margin-top: 9.5%;
+	height: auto;
 }
 
 p#party {
